Внес изменения в проект.

--- a/AloneWork_2-2.10/MainWindow.xaml
+++ b/AloneWork_2-2.10/MainWindow.xaml
@@ -6,7 +6,8 @@
         xmlns:local="clr-namespace:AloneWork_2_2._10"
         mc:Ignorable="d"
         Title="MainWindow" Height="600" Width="800" Background="LightGray">
-    <StackPanel>
+    <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+        <StackPanel>
         
         
         <Border BorderBrush="White" 
@@ -75,6 +76,7 @@
                 </TransformGroup>
             </Border.RenderTransform>
         </Border>
+        </StackPanel>
 
     </StackPanel>
 </Window>
